--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <section class="preview">
             <h2 hidden>preview</h2>
             <div class="preview_iframe">
-                <iframe src='https://tv.naver.com/embed/40951411?autoPlay=true'></iframe>
+                <iframe src='https://tv.naver.com/embed/68333645?autoPlay=true' loading="lazy" frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='544' HEIGHT='306' allow='autoplay' allowfullscreen></iframe>
             </div>  
         </section>
         <!-- //section02 - preview -->
@@ -197,48 +197,48 @@
                 <div class="noti-opa noti-flex">
                     <div class="noti01">
                         <p><strong>공지사항</strong></p>
-                        <p>2024년도 하반기 <br>
+                        <p>2025년도 상반기 <br>
                             NETFLIX ‘멜로무비’ <br>
-                            방영 예정</p>
+                            방영</p>
                     </div>
                     <div class="noti02">
                         <p><strong>공지사항</strong></p>
                         <p>2024년도 하반기 <br>
-                            DISNEY+ ‘조명가게’ <br> 
-                            방영 예정</p>
+                            TVING ‘미지의 서울’ <br> 
+                            방영</p>
                     </div>
                 </div>
     
                 <div class="news-box delay01">
                     <div class="news-day">
-                        <p>24 - 02 - 24</p>
+                        <p>25 - 06 - 09</p>
                     </div>
                     <div class="news-title">
-                        <p><a href="https://www.ggilbo.com/news/articleView.html?idxno=1016603" target="_blank">박보영♥최우식, 넷플릭스 청춘 드라마 '멜로무비'로 만난다</a></p>
+                        <p><a href="https://sports.khan.co.kr/article/202506090805033?pt=nv" target="_blank">박보영, 7년 만의 팬미팅 '행복 충전'</a></p>
                     </div>
                 </div>
                 <div class="news-box delay02">
                     <div class="news-day">
-                        <p>24 - 02 - 19</p>
+                        <p>25 - 06 - 02</p>
                     </div>
                     <div class="news-title">
-                        <p><a href="https://www.slist.kr/news/articleView.html?idxno=527008" target="_blank">박보영, 새 프로필 사진 공개...시크→러블리</a></p>
+                        <p><a href="https://www.mhnse.com/news/articleView.html?idxno=406743" target="_blank">박진영, '첫사랑' ♥박보영에 직진 고백 "좋아하니까"...최고 7.5%(미지의 서울)</a></p>
                     </div>
                 </div>
                 <div class="news-box delay03">
                     <div class="news-day">
-                        <p>23 - 12 - 08</p>
+                        <p>24 - 05 - 28</p>
                     </div>
                     <div class="news-title">
-                        <p><a href="https://tenasia.hankyung.com/article/2023120825784" target="_blank">[단독] 박보영, 강풀 원작·김희원 연출 '조명가게' 합류…주지훈·설현 만난다</a></p>
+                        <p><a href="https://www.osen.co.kr/article/G1112578885" target="_blank">1인 4역' 박보영, ‘미지의 서울’ 통했다..첫주 만에 화제성 1위</a></p>
                     </div>
                 </div>
                 <div class="news-box delay04">
                     <div class="news-day">
-                        <p>23 - 10 - 28</p>
+                        <p>25 - 05 - 24</p>
                     </div>
                     <div class="news-title">
-                        <p><a href="https://www.newsen.com/news_view.php?uid=202310281003593510" target="_blank">박보영 ‘제 8회 런던아시아영화제 빛내러 가요~’[포토엔HD]</a></p>
+                        <p><a href="https://www.gpkorea.com/news/articleView.html?idxno=129064" target="_blank">미지의 서울’ 박보영, 쌍둥이 자매로 1인 2역…서울서 만난 언니 위한 특별한 결단 예고</a></p>
                     </div>
                 </div>
             </section>
