--- a/sub04.html
+++ b/sub04.html
@@ -85,9 +85,9 @@
                 <p>공지사항</p>
             </div>
             <div class="noti-title">
-                <p>2024년도 하반기
+                <p>2025년도 상반기
                     NETFLIX ‘멜로무비’
-                    방영 예정</p>
+                    방영</p>
             </div>
         </div>
         <div class="noti-box">
@@ -95,9 +95,9 @@
                 <p>공지사항</p>
             </div>
             <div class="noti-title">
-                <p>2024년도 하반기
-                    DISNEY+ ‘조명가게’
-                    방영 예정</p>
+                <p>2025년도 상반기
+                    TVING ‘미지의 서울’
+                    방영</p>
             </div>
         </div>
     </div>
@@ -106,6 +106,44 @@
     <h2>NEWS</h2>
     <!-- news-page-01 -->
     <div class="news-box2 news-box-page01">
+            <div class="news-box">
+                <div class="news-day">
+                    <p>25 - 06 - 09</p>
+                </div>
+                <div class="news-title">
+                    <p><a href="https://sports.khan.co.kr/article/202506090805033?pt=nv" target="_blank">박보영, 7년 만의 팬미팅 '행복 충전'</a></p>
+                </div>
+            </div>
+            <div class="news-box">
+                <div class="news-day">
+                    <p>25 - 06 - 02</p>
+                </div>
+                <div class="news-title">
+                    <p><a href="https://www.mhnse.com/news/articleView.html?idxno=406743" target="_blank">박진영, '첫사랑' ♥박보영에 직진 고백 "좋아하니까"...최고 7.5%(미지의 서울)</a></p>
+                </div>
+            </div>
+            <div class="news-box">
+                <div class="news-day">
+                    <p>25 - 05 - 28</p>
+                </div>
+                <div class="news-title">
+                    <p><a href="https://www.osen.co.kr/article/G1112578885" target="_blank">1인 4역' 박보영, ‘미지의 서울’ 통했다..첫주 만에 화제성 1위</a></p>
+                </div>
+            </div>
+            <div class="news-box">
+                <div class="news-day">
+                    <p>25 - 05 - 24</p>
+                </div>
+                <div class="news-title">
+                    <p><a href="https://www.gpkorea.com/news/articleView.html?idxno=129064" target="_blank">미지의 서울’ 박보영, 쌍둥이 자매로 1인 2역…서울서 만난 언니 위한 특별한 결단 예고</a></p>
+                </div>
+            </div>
+        </div>
+    <!-- //news-page-01 -->
+
+
+    <!-- news-page-02 -->
+        <div class="news-box2 news-box-page02">
             <div class="news-box">
                 <div class="news-day">
                     <p>24 - 02 - 24</p>
@@ -139,11 +177,12 @@
                 </div>
             </div>
         </div>
-    <!-- //news-page-01 -->
+        <!-- //news-page-02 -->
 
 
-    <!-- news-page-02 -->
-        <div class="news-box2 news-box-page02">
+
+        <!-- news-page-03 -->
+        <div class="news-box2 news-box-page03">
             <div class="news-box">
                 <div class="news-day">
                     <p>23 - 10 - 13</p>
@@ -174,45 +213,6 @@
                 </div>
                 <div class="news-title">
                     <p><a href="https://www.osen.co.kr/article/G1112196978" target="_blank">박보영x'지우학' 감독 만났다..좀비 아닌 힐링물(정신병동에도 아침이 와요)</a></p>
-                </div>
-            </div>
-        </div>
-        <!-- //news-page-02 -->
-
-
-
-        <!-- news-page-03 -->
-        <div class="news-box2 news-box-page03">
-            <div class="news-box">
-                <div class="news-day">
-                    <p>23 - 09 - 13</p>
-                </div>
-                <div class="news-title">
-                    <p><a href="https://www.bntnews.co.kr/article/view/bnt202309130044" target="_blank">박보영 "tiff 둘째 날"... 토론토에서도 빛나는 '뽀블리♥'</a></p>
-                </div>
-            </div>
-            <div class="news-box">
-                <div class="news-day">
-                    <p>23 - 09 - 11</p>
-                </div>
-                <div class="news-title">
-                    <p><a href="https://tenasia.hankyung.com/topic/article/2023091193514" target="_blank">박보영, 국제영화제에서 더욱 빛나는 한류 비주얼</a></p>
-                </div>
-            </div>
-            <div class="news-box">
-                <div class="news-day">
-                    <p>23 - 08 - 27</p>
-                </div>
-                <div class="news-title">
-                    <p><a href="https://www.starnewskorea.com/stview.php?no=2023082718233640423" target="_blank">박보영, 살아있는 '복숭아짤' 패러디.."눌러보지 마세요. 말랑이에요"</a></p>
-                </div>
-            </div>
-            <div class="news-box">
-                <div class="news-day">
-                    <p>23 - 08 - 05</p>
-                </div>
-                <div class="news-title">
-                    <p><a href="http://www.heraldpop.com/view.php?ud=202308051525263201762_1" target="_blank">박보영, 러블리한 인간 방부제..세상 혼자 사는 동안 미모</a></p>
                 </div>
             </div>
         </div>
